<resources>
    <string name="app_name">InventoryApp</string>
    <string name="add">Add product</string>
    <string name="product">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier Name</string>
    <string name="phone">Phone Number</string>
    <string name="message">The inventory table contains</string>
    <string name="mes">products.</string>
    <string name="saving_mes">Error occuring with saving product</string>
    <string name="saved">Product saved with row id:</string>
    <string name="delete">Delete</string>
    <string name="product_heading">Product</string>
    <string name="cancel">Cancel</string>
    <string name="Deleted">The item is deleted now</string>
    <string name="deletion_successfull">The deletion is successfull</string>
    <string name="deletion_failed">Product can\'t be deleted</string>
    <string name="insertion_successful">The insertion is successfull</string>
    <string name="updation_failed">The product can\'t be updated</string>
    <string name="insertion_failed">Insertion not done</string>
    <string name="quantity_change">Quality is changed</string>
    <string name="quantity_finish_msg">Product is finished</string>
    <string name="action_delete_all_products">Delete</string>
    <string name="unsaved_changes_dialog_msg">a</string>
    <string name="discard">c</string>
    <string name="keep_editing">c</string>
    <string name="delete_all">All products are deleted.</string>
    <string name="deleted_message">Are u sure to delete?</string>
    <string name="Name_empty">Product Name can\'t be empty.Enter Valid name</string>
    <string name="price_empty">Price can\'t be empty. Enter valid price</string>
    <string name="quantity_empty">Quantity can\'t be empty.Please enter valid quantity</string>
    <string name="supplier_empty">Supplier name can\'t be empty. Enter valid Supplier</string>
    <string name="supplier_phone_empty">Phone number can\'t be empty.</string>
    <string name="updation_successful">Updation successful</string>
    <string name="unsaved_changes">There are unsaved changes. Do you want to quit?</string>
    <string name="discard_changes">Discard</string>
    <string name="editing">Stay</string>
    <string name="currency">Rupees</string>
    <string name="call">call</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="quantity_changed">Quantity Changed</string>
    <string name="sale">Sale</string>
    <string name="edit">Edit</string>
    <string name="default_text">Add the product on clicking the add product button</string>
    <string name="to_delete">Are you sure to delete?</string>
    <string name="sep">.</string>
    <string name="seperate">:</string>
    <string name="space" />
    <string name="Deletion_confirmation">Are you sure to delete the product?</string>
</resources>
